[gd_scene load_steps=8 format=3 uid="uid://dte2ik5qyf60j"]

[ext_resource type="FontFile" uid="uid://dthioylksudgf" path="res://addons/rusted-personal-use/RUSTED PERSONAL USE.ttf" id="1_a33i8"]
[ext_resource type="Script" uid="uid://cnlijxoa70gom" path="res://scripts/homescreen.gd" id="1_edeuv"]
[ext_resource type="Texture2D" uid="uid://ddkgyhq360mgh" path="res://assets/—Pngtree—biohazard symbol stains_5147781.png" id="2_1bjcg"]
[ext_resource type="Theme" uid="uid://4jyw0114q1d5" path="res://assets/button.tres" id="2_edeuv"]
[ext_resource type="Script" uid="uid://cf3k13pwab8jh" path="res://scripts/button.gd" id="4_c2ysq"]
[ext_resource type="AudioStream" uid="uid://bpu5gmc1wnfik" path="res://assets/Eternal Eclipse - Chronicles of a Hero (Official Music Video).mp3" id="6_2wg5m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edeuv"]
bg_color = Color(0, 0, 0, 1)

[node name="Homescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_edeuv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_edeuv")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_a33i8")
theme_override_font_sizes/font_size = 100
text = "CODE RED"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 30

[node name="play" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edeuv")
text = "PLAY"
icon_alignment = 1
script = ExtResource("4_c2ysq")

[node name="credits" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edeuv")
text = "CREDITS"
script = ExtResource("4_c2ysq")

[node name="quit" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edeuv")
text = "quit"
script = ExtResource("4_c2ysq")

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_a33i8")
theme_override_font_sizes/font_size = 30
text = "CAMPAIGN Coming soon!!!"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_1bjcg")
expand_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2wg5m")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2wg5m")
autoplay = true

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/quit" to="." method="_on_quit_pressed"]
